@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 0.2.3-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Thu Mar 28 2019 Jim Anderson <thesemicolons@protonmail.com> - 0.2.2-0
 - Moved code for defining $aesni from params.pp to init.pp
 
